- added functions to load search engines hostnames from file - added functions to load logfile names from a specific directory

--- a/todo
+++ b/todo
@@ -1,1 +1,19 @@
-- add code to load search engine domains from a file
+[ ] - add code to do multiple htlog files with one*n threads for each file
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+[x] - add code to load search engine domains from a file
