--- a/todo
+++ b/todo
@@ -1,19 +1,3 @@
-[ ] - add code to do multiple htlog files with one*n threads for each file
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+[ ] - figure out why multithreaded code segfaults
+[ ] - make it launch another max threads once the max number of threads is completed until all files are done
 [x] - add code to load search engine domains from a file
