--- a/todo
+++ b/todo
@@ -1,3 +1,4 @@
-[ ] - figure out why multithreaded code segfaults
-[ ] - make it launch another max threads once the max number of threads is completed until all files are done
+[ ] - fix segfault problem
+[x] - make it launch another max threads once the max number of threads is completed until all files are done
 [x] - add code to load search engine domains from a file
+[x] - figure out why multithreaded code segfaults
