- todo updated - Makefile updated with c++ only build steps - got rid of myEndThread function ( using only endThread now ) - now g_ua_parser is instantiated in processUserAgent function ( so   each thread has its own copy to avoid thread safety issues...) -  rewrote htlog_uap.cpp and htlog_uap.hpp without namespaces and with    as little "auto" use as possible. - changed the boost::regex stuff to std::regex and compiled a   conforming version of gcc (4.9.2) - added some more test srces in c++ dir - fixes to worker-pool.cpp

--- a/todo
+++ b/todo
@@ -1,4 +1,12 @@
-[ ] - fix segfault problem
+DOING:
+[ ] - htlog_uap.cpp regex code segfaults in a lot of different ways ( fix this ):
+
+
+QUESTIONABLE:
+  [?] - I think I'm still leaking memory due to threads:
+    TASKS=$(ls -l /proc/`pgrep cloudstats`/task | grep -v total | wc -l); STACKS=$(pmap `pgrep cloudstats` | grep `ulimit -s` | wc -l); echo $TASKS $STACKS;
+
+DONE:
 [x] - make it launch another max threads once the max number of threads is completed until all files are done
 [x] - add code to load search engine domains from a file
 [x] - figure out why multithreaded code segfaults
