--- a/todo
+++ b/todo
@@ -1,12 +1,20 @@
 DOING:
-[ ] - fix segfaults in multithread and bad_alloc when running single thread
 
+[ ] - fix bugs
+  [ ] - fix everything that address sanitizer flags
+  [ ] - fix bad alloc with thread pool size 1
+    TASKS=$(ls -l /proc/`pgrep cloudstats`/task | grep -v total | wc -l); STACKS=$(pmap `pgrep cloudstats` | grep `ulimit -s` | wc -l); echo $TASKS $STACKS;
+  [ ] - fix segfaults with larger thread pool size
 
 QUESTIONABLE:
   [?] - I think I'm still leaking memory due to threads:
-    TASKS=$(ls -l /proc/`pgrep cloudstats`/task | grep -v total | wc -l); STACKS=$(pmap `pgrep cloudstats` | grep `ulimit -s` | wc -l); echo $TASKS $STACKS;
 
 DONE:
+[x] - fix all warnings
+
 [x] - make it launch another max threads once the max number of threads is completed until all files are done
+
 [x] - add code to load search engine domains from a file
+
 [x] - figure out why multithreaded code segfaults
+
