- moved the locking and waiting lines of code to be after the thread's   work is done ( this is needed because otherwise only one thread at a time will be doing work and the rest of them will be waiting - not good...) - applied the same change to worker-pool.cpp test code - am using std::thread::hardware_concurency() to choose the number of   threads to launch

--- a/todo
+++ b/todo
@@ -1,16 +1,22 @@
 DOING:
-[ ] - fix bugs
-  [ ] - fix everything that address sanitizer flags
-  [ ] - fix bad alloc with thread pool size 1
-    TASKS=$(ls -l /proc/`pgrep cloudstats`/task | grep -v total | wc -l); STACKS=$(pmap `pgrep cloudstats` | grep `ulimit -s` | wc -l); echo $TASKS $STACKS;
-  [ ] - fix segfaults with larger thread pool size
-
 
 QUESTIONABLE:
-  [?] - I think I'm still leaking memory due to threads:
+[?] - the program still seems to stall for reason not being sql...
 
+[?] - am I still leaking memory??
 
 DONE:
+[x] - only one thread is running at a time!!!!
+   top -H -p `pgrep cloudstats`
+  the rest are in futex_wait state...
+  moving the wait to right before launching replacement threads seems to fix it ...
+
+[x] - fix everything that address sanitizer flags
+
+[x] - fix bad alloc with thread pool size 1
+  TASKS=$(ls -l /proc/`pgrep cloudstats`/task | grep -v total | wc -l); STACKS=$(pmap `pgrep cloudstats` | grep `ulimit -s` | wc -l); echo $TASKS $STACKS;
+[x] - fix segfaults with larger thread pool size
+
 [x] - fix all warnings
 
 [x] - make it launch another max threads once the max number of threads is completed until all files are done
